@@ -116,7 +116,7 @@ $(document).ready(function(){
     <div id="loader"></div>
 
     <div id="header" class="EaselJS">
-        <!-- <h1>Make stacks of blocks; click on the rabbit to run them.</h1> -->
+        <!-- <h1>Make a Musical Matrix using Pitch and Rhythm Blocks; Perform, Save, and Manipulate Chunks.</h1> -->
     </div>
 
     <div class="planet" style="display: none;">
