@@ -1,1 +1,9 @@
-All NEWS related to Mouse Music
+All NEWS related to Music Blocks (with Mr. Mouse)
+
+...so much stuff has happened since this was forked from TurtleJS!
+
+Mainly, we have a new Matrix--this helps users visualize the music as the make it--a kind of pitch-rhythm workspace.
+
+We have new palettes and new blocks.
+
+We have "Mr. Mouse" our Music Blocks Conductor
